objects/Tests_Classifications__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Tests_Classifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Results__c</fullName>
        <label>Results</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Free Movement</fullName>
                </value>
                <value>
                    <fullName>Minor Restrictions</fullName>
                </value>
                <value>
                    <fullName>Moderate Restrictions</fullName>
                </value>
                <value>
                    <fullName>Severely Restricted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Date__c</fullName>
        <label>Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tests_Classifications__c</fullName>
        <label>Tests/Classifications</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Activity Level</fullName>
                </value>
                <value>
                    <fullName>Bone Mineral Density</fullName>
                </value>
                <value>
                    <fullName>CD4 Tests</fullName>
                </value>
                <value>
                    <fullName>Chest X-Ray</fullName>
                </value>
                <value>
                    <fullName>CTEPH + Combo</fullName>
                </value>
                <value>
                    <fullName>CTEPH + Mono</fullName>
                </value>
                <value>
                    <fullName>DLQI</fullName>
                </value>
                <value>
                    <fullName>ECOG</fullName>
                </value>
                <value>
                    <fullName>EDDS</fullName>
                </value>
                <value>
                    <fullName>ERT Patient Re-Consent 2019</fullName>
                </value>
                <value>
                    <fullName>Genotype – Hepatitis C</fullName>
                </value>
                <value>
                    <fullName>KRAS Test</fullName>
                </value>
                <value>
                    <fullName>Liver Function Tests</fullName>
                </value>
                <value>
                    <fullName>NJ Phase</fullName>
                </value>
                <value>
                    <fullName>OP-Impact to Life</fullName>
                </value>
                <value>
                    <fullName>P1NP</fullName>
                </value>
                <value>
                    <fullName>P1NP baseline</fullName>
                </value>
                <value>
                    <fullName>PAH + Combo</fullName>
                </value>
                <value>
                    <fullName>PAH + Mono</fullName>
                </value>
                <value>
                    <fullName>PASI</fullName>
                </value>
                <value>
                    <fullName>PEG-J</fullName>
                </value>
                <value>
                    <fullName>Tuberculosis Test</fullName>
                </value>
                <value>
                    <fullName>WHO Classification (PAH)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tests - Classifications</label>
    <nameField>
        <displayFormat>TC-{0000000000}</displayFormat>
        <label>Tests/Classifications Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tests - Classifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>